--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,34 @@
 /*  your css code here. If applicable */
+body{
+	
+	background-color:#cccccc;
+	margin:0 20px;
+}
+h1,h3{
+	
+	text-align:center;
+}
+
+	
+
+h4{
+	margin-bottom:0;
+}
+a{
+	text-decoration:none;
+	color:black;
+}
+.player_one{
+	background-color:white;
+	border:1px solid black;
+	border-radius:10px;
+}
+.player_two{
+	width:50%;
+	margin: 0 auto;
+	background-color:white;
+	align:center;
+	
+}
+	
+}
