--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 /*  your css code here. If applicable */
 body{
 	
-	background-color:#cccccc;
+	background-color:rgb(204, 204, 204);
 	margin:0 20px;
 }
-h1,h3{
+h1,h2{
 	
 	text-align:center;
 }
@@ -26,7 +26,7 @@ a{
 .player_two{
 	width:50%;
 	margin: 0 auto;
-	background-color:white;
+	background-color:rgb(255 255 255);
 	align:center;
 	
 }
